<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TrackText"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="337dp"
            android:text="@string/Track" />

        <TextView
            android:id="@+id/SongName"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="245dp" />

        <TextView
            android:id="@+id/ArtistText"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="173dp"
            android:text="@string/Artist" />

        <TextView
            android:id="@+id/ArtistName"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="238dp"
            android:layout_marginTop="17dp" />

        <TextView
            android:id="@+id/AlbumText"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="57dp"
            android:text="@string/Album" />

        <TextView
            android:id="@+id/AlbumName"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="57dp" />

        <TextView
            android:id="@+id/DateText"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="183dp"
            android:layout_marginTop="57dp"
            android:text="@string/Date" />

        <TextView
            android:id="@+id/DateName"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="242dp"
            android:layout_marginTop="57dp" />

    </RelativeLayout>
</LinearLayout>